# docs/swagger.yaml
@@ -132,6 +132,25 @@ definitions:
         description: 'Probe type: tcp | http | command'
         type: string
     type: object
+  github_com_crazyfrankie_kube-ctl_internal_model_req.Deployment:
+    properties:
+      labels:
+        items:
+          $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_internal_model_req.Item'
+        type: array
+      name:
+        type: string
+      namespace:
+        type: string
+      replicas:
+        type: integer
+      selector:
+        items:
+          $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_internal_model_req.Item'
+        type: array
+      template:
+        $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_internal_model_req.Pod'
+    type: object
   github_com_crazyfrankie_kube-ctl_internal_model_req.DnsConfig:
     properties:
       nameservers:
@@ -607,6 +626,26 @@ definitions:
         type: string
       namespace:
         type: string
+    type: object
+  github_com_crazyfrankie_kube-ctl_internal_model_resp.Deployment:
+    properties:
+      age:
+        type: integer
+      available:
+        description: Available 字段表示 Deployment 中可用的 Pod 副本数
+        type: integer
+      name:
+        type: string
+      namespace:
+        type: string
+      ready:
+        description: Ready 字段表示 Deployment 中正在运行的 Pod 副本的数量
+        type: integer
+      replicas:
+        type: integer
+      upToDate:
+        description: UpToDate 字段表示与 Deployment 所期望的副本数相比，有多少个 Pod 副本是最新的
+        type: integer
     type: object
   github_com_crazyfrankie_kube-ctl_internal_model_resp.Ingress:
     properties:
@@ -1321,6 +1360,136 @@ paths:
       summary: 获取ConfigMap列表
       tags:
       - ConfigMap管理
+  /api/deployment:
+    delete:
+      consumes:
+      - application/json
+      description: 删除指定命名空间下的指定Deployment
+      parameters:
+      - description: 命名空间
+        in: query
+        name: namespace
+        required: true
+        type: string
+      - description: Deployment 名称
+        in: query
+        name: name
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 删除成功
+          schema:
+            $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_pkg_response.Response'
+        "500":
+          description: 系统错误(code=30000)
+          schema:
+            $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_pkg_response.Response'
+      summary: 删除 Deployment
+      tags:
+      - Deployment 管理
+    get:
+      consumes:
+      - application/json
+      description: 获取指定命名空间下指定Deployment的详细信息
+      parameters:
+      - description: 命名空间
+        in: query
+        name: namespace
+        required: true
+        type: string
+      - description: Deployment 名称
+        in: query
+        name: name
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回Deployment的详细信息
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_pkg_response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_internal_model_req.Deployment'
+              type: object
+        "500":
+          description: 系统错误(code=30000)
+          schema:
+            $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_pkg_response.Response'
+      summary: 获取Deployment详情
+      tags:
+      - Deployment 管理
+    post:
+      consumes:
+      - application/json
+      description: 创建新的 Deployment 或更新已存在的 Deployment
+      parameters:
+      - description: Deployment 配置信息
+        in: body
+        name: pod
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_internal_model_req.Deployment'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 操作成功，返回成功消息
+          schema:
+            $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_pkg_response.Response'
+        "400":
+          description: 参数错误(code=20001)
+          schema:
+            $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_pkg_response.Response'
+        "500":
+          description: 系统错误(code=30000)
+          schema:
+            $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_pkg_response.Response'
+      summary: 创建或更新 Deployment
+      tags:
+      - Deployment 管理
+  /api/deployment/list:
+    get:
+      consumes:
+      - application/json
+      description: 获取指定命名空间下的所有Deployment列表
+      parameters:
+      - description: 命名空间
+        in: query
+        name: namespace
+        required: true
+        type: string
+      - description: 关键词
+        in: query
+        name: keyword
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回Deployment列表
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_pkg_response.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_internal_model_resp.Deployment'
+                  type: array
+              type: object
+        "500":
+          description: 系统错误(code=30000)
+          schema:
+            $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_pkg_response.Response'
+      summary: 获取Deployment列表
+      tags:
+      - Deployment 管理
   /api/ingress:
     delete:
       consumes:
